--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -17,6 +17,8 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
+    "react-validation": "^3.0.7",
+    "validator": "^13.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
